# boring_calculator

./: LICENSE  README.md  __version__  pyproject.toml  requirements.txt
boring_calculator/: __init__.py  main.py
src/: __init__.py
src/boring_calculator/: __init__.py  main.py
tests/: test_operations.py
